--- a/src/Lupcom/contao-member-newsfeed-bundle/composer.json
+++ b/src/Lupcom/contao-member-newsfeed-bundle/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Shoaib Sarwar",
-            "email": "shoaib.sarwar@lupcom.de"
+            "email": "sarwar.shoaib@lupcom.de"
         }
     ],
     "extra": {
